--- a/homeoptik/templates/oscar/catalogue/partials/stock_record.html
+++ b/homeoptik/templates/oscar/catalogue/partials/stock_record.html
@@ -1,3 +1,4 @@
+
 {% load currency_filters %}
 {% load i18n %}
 {% load purchase_info_tags %}
@@ -6,20 +7,20 @@
 
 {% if session.price.exists %}
     {% if session.price.excl_tax == 0 %}
-        <p class="price_color">{% trans "Free" %}</p>
+        <span class="price">{% trans "Free" %}</span>
     {% elif session.price.is_tax_known %}
-        <p class="price_color">{{ session.price.incl_tax|currency:session.price.currency }}</p>
+        <span class="price">{{ session.price.incl_tax|currency:session.price.currency }}</span>
     {% else %}
-        <p class="price_color">{{ session.price.excl_tax|currency:session.price.currency }}</p>
+        <span class="price">{{ session.price.excl_tax|currency:session.price.currency }}</span>
     {% endif %}
 {% else %}
-    <p class="price_color">&nbsp;</p>
+    <span class="price">&nbsp;</span>
 {% endif %}
-<p class="{{ session.availability.code }} availability">
-    <i class="icon-{% if session.availability.is_available_to_buy %}ok{% else %}remove{% endif %}"></i>
-    {% if verbose %}
-        {{ session.availability.message }}
-    {% else %}
-        {{ session.availability.short_message }}
-    {% endif %}
-</p>
+{#<p class="{{ session.availability.code }} availability">#}
+{#    <i class="icon-{% if session.availability.is_available_to_buy %}ok{% else %}remove{% endif %}"></i>#}
+{#    {% if verbose %}#}
+{#        {{ session.availability.message }}#}
+{#    {% else %}#}
+{#        {{ session.availability.short_message }}#}
+{#    {% endif %}#}
+{#</p>#}
