--- a/homeoptik/templates/oscar/dashboard/offers/offer_list.html
+++ b/homeoptik/templates/oscar/dashboard/offers/offer_list.html
@@ -9,12 +9,12 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{{ homepage_url }}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active">{% trans "Offers" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
