--- a/homeoptik/templates/oscar/dashboard/promotions/pagepromotion_list.html
+++ b/homeoptik/templates/oscar/dashboard/promotions/pagepromotion_list.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -20,7 +20,7 @@
             <a href="{% url 'dashboard:promotion-list' %}">{% trans "Content blocks" %}</a>
         </li>
         <li class="active">{% trans "Content blocks by page" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block dashboard_content %}
