--- a/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form_compact.html
+++ b/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form_compact.html
@@ -9,8 +9,14 @@
     <form action="{% url 'basket:add' pk=product.pk %}" method="post">
         {% csrf_token %}
         {{ basket_form.as_p }}
-        <button type="submit" class="btn btn-primary btn-block" data-loading-text="{% trans 'Adding...' %}">{% trans "Add to basket" %}</button>
+        <button type="submit" class="btn btn-outline btn-base-hover" data-loading-text="{% trans 'Adding...' %}">{% trans "Add to basket" %}</button>
     </form>
 {% else %}
-    <span class="btn btn-default btn-block disabled">{% trans "Add to basket" %}</span>
+    <span class="btn btn-default disabled">
+        {% if verbose %}
+            {{ session.availability.message }}
+        {% else %}
+            {{ session.availability.short_message }}
+        {% endif %}
+    </span>
 {% endif %}
