--- a/homeoptik/templates/oscar/dashboard/catalogue/category_delete.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/category_delete.html
@@ -4,7 +4,7 @@
 {% block body_class %}{{ block.super }} create-page{% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -12,7 +12,7 @@
         <a href="{% if parent %}{% url 'dashboard:catalogue-category-detail-list' pk=parent.pk %}{% else %}{% url 'dashboard:catalogue-category-list' %}{% endif %}">{% trans "Categories" %}</a>
     </li>
     <li class="active">{% trans "Delete category?" %}</li>
-</ol>
+</ul>
 {% endblock %}
 
 {% block headertext %}
