--- a/homeoptik/templates/oscar/dashboard/catalogue/category_list.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/category_list.html
@@ -10,12 +10,12 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active">{% trans "Categories" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
