--- a/homeoptik/templates/oscar/dashboard/catalogue/product_class_delete.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/product_class_delete.html
@@ -4,7 +4,7 @@
 {% block body_class %}{{ block.super }} create-page{% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -12,7 +12,7 @@
         <a href="{% url 'dashboard:catalogue-class-list' %}">{% trans "Product type" %}</a>
     </li>
     <li class="active">{% trans "Delete product type?" %}</li>
-</ol>
+</ul>
 {% endblock %}
 
 {% block headertext %}
