--- a/homeoptik/templates/oscar/dashboard/catalogue/product_class_form.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/product_class_form.html
@@ -9,7 +9,7 @@
 {% block body_class %}{{ block.super }} create-page{% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -17,7 +17,7 @@
             <a href="{% url 'dashboard:catalogue-class-list' %}">{% trans "Product Type" %}</a>
         </li>
         <li class="active">{{ title }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}{{ title }}{% endblock %}
