--- a/homeoptik/templates/oscar/dashboard/catalogue/product_delete.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/product_delete.html
@@ -9,7 +9,7 @@
 {% block body_class %}{{ block.super }} create-page{% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -20,7 +20,7 @@
             <a href="{% url 'dashboard:catalogue-product' pk=product.pk %}">{{ product.get_title }}</a>
         </li>
         <li class="active">{{ title }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}{{ title }}{% endblock %}
