--- a/homeoptik/templates/oscar/dashboard/catalogue/product_list.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/product_list.html
@@ -12,12 +12,12 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active">{% trans "Products" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
