--- a/homeoptik/templates/oscar/dashboard/catalogue/product_update.html
+++ b/homeoptik/templates/oscar/dashboard/catalogue/product_update.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -27,7 +27,7 @@
             </li>
         {% endif %}
         <li class="active">{{ title }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}{{ title }}{% endblock %}
