--- a/homeoptik/templates/oscar/dashboard/comms/detail.html
+++ b/homeoptik/templates/oscar/dashboard/comms/detail.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -17,7 +17,7 @@
             <a href="{% url 'dashboard:comms-list' %}">{% trans "Emails" %}</a>
         </li>
         <li class="active"><a href=".">{{ commtype.name }}</a></li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
