--- a/homeoptik/templates/oscar/dashboard/comms/list.html
+++ b/homeoptik/templates/oscar/dashboard/comms/list.html
@@ -8,12 +8,12 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active"><a href=".">{% trans "Emails" %}</a></li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
