--- a/homeoptik/templates/oscar/dashboard/offers/offer_delete.html
+++ b/homeoptik/templates/oscar/dashboard/offers/offer_delete.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -19,7 +19,7 @@
             <a href="{% url 'dashboard:offer-detail' pk=offer.pk %}">'{{ offer.name }}'</a>
         </li>
         <li class="active">{% trans "Delete?" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
