--- a/homeoptik/templates/oscar/dashboard/offers/offer_detail.html
+++ b/homeoptik/templates/oscar/dashboard/offers/offer_detail.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -17,7 +17,7 @@
             <a href="{% url 'dashboard:offer-list' %}">{% trans "Offers" %}</a>
         </li>
         <li class="active">{{ offer.name }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
