--- a/homeoptik/templates/oscar/dashboard/offers/step_form.html
+++ b/homeoptik/templates/oscar/dashboard/offers/step_form.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ol class="breadcrumb pull-left">
+<ul class="breadcrumb">
     <li>
         <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
     </li>
@@ -33,7 +33,7 @@
     </li>
     {% endif %}
     <li class="active">{{ title }}</li>
-</ol>
+</ul>
 {% endblock %}
 
 {% block headertext %}
