--- a/homeoptik/templates/oscar/dashboard/orders/order_list.html
+++ b/homeoptik/templates/oscar/dashboard/orders/order_list.html
@@ -11,12 +11,12 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active">{% trans "Orders" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
