--- a/homeoptik/templates/oscar/dashboard/orders/shippingaddress_form.html
+++ b/homeoptik/templates/oscar/dashboard/orders/shippingaddress_form.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -17,7 +17,7 @@
             <a href="{% url 'dashboard:order-detail' number=order.number %}">{{ order.number }}</a>
         </li>
         <li class="active">{% trans "Edit shipping address" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
