--- a/homeoptik/templates/oscar/dashboard/partners/partner_list.html
+++ b/homeoptik/templates/oscar/dashboard/partners/partner_list.html
@@ -7,12 +7,12 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active">{% trans "Partners" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
