--- a/homeoptik/templates/oscar/dashboard/partners/partner_manage.html
+++ b/homeoptik/templates/oscar/dashboard/partners/partner_manage.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -16,7 +16,7 @@
             <a href="{% url 'dashboard:partner-list' %}">{% trans "Partners" %}</a>
         </li>
         <li class="active">{{ partner.name }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}{{ partner.name }}{% endblock %}
