--- a/homeoptik/templates/oscar/dashboard/partners/partner_user_list.html
+++ b/homeoptik/templates/oscar/dashboard/partners/partner_user_list.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -15,7 +15,7 @@
             <a href="{% url 'dashboard:partner-list' %}">{% trans "Partners" %}</a>
         </li>
         <li class="active">{{ partner.name }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
