--- a/homeoptik/templates/oscar/dashboard/promotions/form.html
+++ b/homeoptik/templates/oscar/dashboard/promotions/form.html
@@ -4,7 +4,7 @@
 {% block body_class %}{{ block.super }} create-page promotions{% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -12,7 +12,7 @@
             <a href="{% url 'dashboard:promotion-list' %}">{% trans "Content blocks" %}</a>
         </li>
         <li class="active">{{ heading }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
