--- a/homeoptik/templates/oscar/dashboard/ranges/range_form.html
+++ b/homeoptik/templates/oscar/dashboard/ranges/range_form.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -20,7 +20,7 @@
         {% else %}
             <li class="active">{{ title }}</li>
         {% endif %}
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
