--- a/homeoptik/templates/oscar/dashboard/ranges/range_product_list.html
+++ b/homeoptik/templates/oscar/dashboard/ranges/range_product_list.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -19,7 +19,7 @@
             <a href="{% url 'dashboard:range-update' pk=range.id %}">'{{ range.name }}'</a>
         </li>
         <li class="active">{% trans "Products" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
