--- a/homeoptik/templates/oscar/dashboard/reviews/review_delete.html
+++ b/homeoptik/templates/oscar/dashboard/reviews/review_delete.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -17,7 +17,7 @@
             <a href="{% url 'dashboard:reviews-list' %}">{% trans "Reviews" %}</a>
         </li>
         <li class="active">{% blocktrans with title=review.title|truncatechars:30 %}Delete review "{{ title }}"?{% endblocktrans %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
