--- a/homeoptik/templates/oscar/dashboard/shipping/weight_band_form.html
+++ b/homeoptik/templates/oscar/dashboard/shipping/weight_band_form.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -20,7 +20,7 @@
             {{ band.method.name }}
         </li>
         <li class="active">{% trans "Edit weight band" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
