--- a/homeoptik/templates/oscar/dashboard/shipping/weight_based_delete.html
+++ b/homeoptik/templates/oscar/dashboard/shipping/weight_based_delete.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -17,7 +17,7 @@
             {{ method.name }}
         </li>
         <li class="active">{% trans "Delete?" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
