--- a/homeoptik/templates/oscar/dashboard/shipping/weight_based_form.html
+++ b/homeoptik/templates/oscar/dashboard/shipping/weight_based_form.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -27,7 +27,7 @@
         {% else %}
             <li class="active">{% trans "Create a new shipping method" %}</li>
         {% endif %}
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
