--- a/homeoptik/templates/oscar/dashboard/users/detail.html
+++ b/homeoptik/templates/oscar/dashboard/users/detail.html
@@ -7,7 +7,7 @@
 {% block title %}{{ customer.email }} | {{ block.super }}{% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -15,7 +15,7 @@
             <a href="{% url 'dashboard:users-index' %}">{% trans "Customers" %}</a>
         </li>
         <li class="active">{{ customer.email }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}{{ customer.email }}{% endblock %}
