--- a/homeoptik/templates/oscar/dashboard/users/index.html
+++ b/homeoptik/templates/oscar/dashboard/users/index.html
@@ -16,12 +16,12 @@
 {% endblock header %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
         <li class="active">{% trans "Customers" %}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block dashboard_content %}
