--- a/homeoptik/templates/oscar/dashboard/vouchers/voucher_detail.html
+++ b/homeoptik/templates/oscar/dashboard/vouchers/voucher_detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -15,7 +15,7 @@
             <a href="{% url 'dashboard:voucher-list' %}">{% trans "Vouchers" %}</a>
         </li>
         <li class="active">{{ voucher }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block headertext %}
