--- a/homeoptik/templates/oscar/dashboard/vouchers/voucher_list.html
+++ b/homeoptik/templates/oscar/dashboard/vouchers/voucher_list.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ol class="breadcrumb pull-left">
+    <ul class="breadcrumb">
         <li>
             <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         </li>
@@ -18,7 +18,7 @@
             </li>
         {% endif %}
         <li class="active">{{ description }}</li>
-    </ol>
+    </ul>
 {% endblock %}
 
 {% block header %}
