--- a/homeoptik/templates/oscar/layout_2_col.html
+++ b/homeoptik/templates/oscar/layout_2_col.html
@@ -41,7 +41,7 @@ main content area to split it into a sidebar and a content block
             <div class="row">
 
                 <!-- Side Col -->
-                <div class="side-col side-col-padded col-sm-4 col-md-4">
+                <div class="side-col side-col-padded col-sm-3 col-md-3">
                     {# Render promotions at the top of the left-hand sidebar #}
                     <div id="promotions_left">
                         {% for promotion in promotions_left %}
@@ -53,7 +53,7 @@ main content area to split it into a sidebar and a content block
                 <!-- /Side Col -->
 
                 <!-- Main Col -->
-                <div class="main-col col-sm-8 col-md-8 mgb-30-xs">
+                <div class="main-col col-sm-9 col-md-9">
                     {% include "partials/alert_messages.html" %}
 
                     <div id="promotions">
