--- a/homeoptik/templates/oscar/partials/pagination.html
+++ b/homeoptik/templates/oscar/partials/pagination.html
@@ -2,10 +2,9 @@
 {% load i18n %}
 
 {% if paginator.num_pages > 1 %}
-    <div>
-        <ul class="pager">
+        <ul class="pagination">
             {% if page_obj.has_previous %}
-                <li class="previous"><a href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}">{% trans "previous" %}</a></li>
+                <li><a href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}">«</a></li>
             {% endif %}
             <li class="current">
             {% blocktrans with page_num=page_obj.number total_pages=paginator.num_pages %}
@@ -13,8 +12,7 @@
             {% endblocktrans %}
             </li>
             {% if page_obj.has_next %}
-                <li class="next"><a href="?{% get_parameters page %}page={{ page_obj.next_page_number }}">{% trans "next" %}</a></li>
+                <li><a href="?{% get_parameters page %}page={{ page_obj.next_page_number }}">»</a></li>
             {% endif %}
         </ul>
-    </div>
 {% endif %}
