fixed thumbs in product template pagination done

--- a/homeoptik/templates/oscar/partials/pagination.html
+++ b/homeoptik/templates/oscar/partials/pagination.html
@@ -1,18 +1,27 @@
 {% load display_tags %}
 {% load i18n %}
+{% load homeoptik_tags %}
 
 {% if paginator.num_pages > 1 %}
-        <ul class="pagination">
-            {% if page_obj.has_previous %}
-                <li><a href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}">«</a></li>
-            {% endif %}
-            <li class="current">
-            {% blocktrans with page_num=page_obj.number total_pages=paginator.num_pages %}
-                Page {{ page_num }} of {{ total_pages }}
-            {% endblocktrans %}
+    <ul class="pagination">
+        {% if page_obj.has_previous %}
+            <li><a href="?{% get_parameters page %}page={{ page_obj.previous_page_number }}">«</a></li>
+        {% endif %}
+        {% nearest_pages page_obj.number paginator.num_pages as pages %}
+        {% for page_num in pages %}
+            <li>
+                <a href="?{% get_parameters page %}page={{ page_num }}"
+                            {% if page_obj.number == page_num %}class="btn disabled"{% endif %}>
+                    {% if page_obj.number == page_num %}
+                        <strong class="pcolor">{{ page_num }}</strong>
+                    {% else %}
+                        {{ page_num }}
+                    {% endif %}
+                </a>
             </li>
-            {% if page_obj.has_next %}
-                <li><a href="?{% get_parameters page %}page={{ page_obj.next_page_number }}">»</a></li>
-            {% endif %}
-        </ul>
+        {% endfor %}
+        {% if page_obj.has_next %}
+            <li><a href="?{% get_parameters page %}page={{ page_obj.next_page_number }}">»</a></li>
+        {% endif %}
+    </ul>
 {% endif %}
