--- a/homeoptik/templates/oscar/catalogue/partials/product.html
+++ b/homeoptik/templates/oscar/catalogue/partials/product.html
@@ -9,7 +9,7 @@
         {% block product_image %}
             <div class="image">
                 {% with image=product.primary_image %}
-                    {% thumbnail image.original "x270" as thumb %}
+                    {% thumbnail image.original "270x300" padding=True as thumb %}
                         <a href="{{ product.get_absolute_url }}" class="main"><img src="{{ thumb.url }}" alt="{{ product.get_title }}"></a>
                     {% endthumbnail %}
                 {% endwith %}
