rating stars fixed

--- a/homeoptik/templates/oscar/catalogue/partials/product.html
+++ b/homeoptik/templates/oscar/catalogue/partials/product.html
@@ -32,11 +32,11 @@
                     {# TODO: ratings stars #}
                     <!-- rating -->
                     <ul class="hlinks hlinks-rating {{ product.rating|as_stars }}">
-                        <li class="active"><i class="icon fa fa-star"></i></li>
-                        <li class="active"><i class="icon fa fa-star"></i></li>
-                        <li class="active"><i class="icon fa fa-star"></i></li>
-                        <li><i class="icon fa fa-star"></i></li>
-                        <li><i class="icon fa fa-star"></i></li>
+                        <li><a><i class="icon fa fa-star"></i></a></li>
+                        <li><a><i class="icon fa fa-star"></i></a></li>
+                        <li><a><i class="icon fa fa-star"></i></a></li>
+                        <li><a><i class="icon fa fa-star"></i></a></li>
+                        <li><a><i class="icon fa fa-star"></i></a></li>
                     </ul>
                     <!-- /rating -->
                 {% endiffeature %}
