--- a/homeoptik/templates/oscar/catalogue/category.html
+++ b/homeoptik/templates/oscar/catalogue/category.html
@@ -12,6 +12,12 @@
 
 {% block headertext %}{{ category.name }}{% endblock %}
 
+{% if category.image %}
+    {% block intro_bg %}{{ category.image.url }}{% endblock %}
+{% endif %}
+
+{% block subheader %}{{ category.description|safe }}{% endblock %}
+
 {% block breadcrumbs %}
     <ol class="breadcrumb pull-left">
         <li>
@@ -27,13 +33,5 @@
 {% endblock breadcrumbs %}
 
 {% block content %}
-    {% if category.description %}
-        <div class="row">
-            <div class="col-sm-9"><p>{{ category.description|safe }}</p></div>
-            {% if category.image %}
-                <div class="col-sm-3"><img src="{{ category.image.url }}" alt="{{ category.name }}" class="img-responsive" /></div>
-            {% endif %}
-        </div>
-    {% endif %}
     {{ block.super }}
 {% endblock %}
