--- a/homeoptik/templates/oscar/layout_2_col.html
+++ b/homeoptik/templates/oscar/layout_2_col.html
@@ -7,8 +7,12 @@ main content area to split it into a sidebar and a content block
 {% endcomment %}
 {% block content_wrapper %}
     {% block header %}
-        <section class="intro-block intro-page boxed-section page-bg overlay-dark-m">
-
+        <section class="intro-block intro-page boxed-section page-bg overlay-dark-m" >
+            <style>
+                .page-bg {
+                    background: url("{% block intro_bg %}{% endblock %}") no-repeat center 0 fixed;
+                }
+            </style>
             <!-- Container -->
             <div class="container">
                 <!-- Section Title -->
