--- a/homeoptik/templates/oscar/layout.html
+++ b/homeoptik/templates/oscar/layout.html
@@ -67,7 +67,7 @@
                 </section>
             {% endblock %}
 
-            <section class="page-info-block boxed-section">
+            <section class="{% block breadcrumbs_styles %}page-info-block boxed-section{% endblock %}">
                 <!-- Container -->
                 <div class="container cont-pad-x-15">
                     {% block breadcrumbs %}{% endblock %}
