test images added

--- a/homeoptik/templates/oscar/catalogue/category.html
+++ b/homeoptik/templates/oscar/catalogue/category.html
@@ -12,9 +12,11 @@
 
 {% block headertext %}{{ category.name }}{% endblock %}
 
-{% if category.image %}
-    {% block intro_bg %}{{ category.image.url }}{% endblock %}
-{% endif %}
+{% block intro_bg %}
+    {% if category.image %}
+        {{ category.image.url }}
+    {% endif %}
+{% endblock %}
 
 {% block subheader %}{{ category.description|safe }}{% endblock %}
 
